--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Startup</title>
-  <link rel="stylesheet" href="style.css">
+  <title>NxtGenSec – Journey</title>
+  <style>
+    body { font-family: Arial; max-width: 900px; margin: auto; padding: 40px; }
+    .event { border-left: 3px solid #444; padding-left: 20px; margin-bottom: 30px; }
+    .date { color: gray; font-size: 14px; }
+    .title { font-size: 22px; font-weight: bold; }
+    .summary { margin: 10px 0; }
+    a { color: #0057ff; text-decoration: none; }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Startup</h1>
-  <p>This site is hosted on Cloudflare.</p>
+
+<h1>🚀 NxtGenSec – From Vision to Reality</h1>
+<p>A timeline of our journey (latest first).</p>
+
+<div class="event">
+  <div class="date">December 2025 – Present</div>
+  <div class="title">Incorporation of NxtGenSec Pvt. Ltd.</div>
+  <div class="summary">
+    NxtGenSec was officially incorporated, marking the transition from research to a registered startup.
+  </div>
+  <a href="/updates/2026-incorporation.html">Read full details →</a>
+</div>
+
+<div class="event">
+  <div class="date">2025</div>
+  <div class="title">Assistive Workmate Project</div>
+  <div class="summary">
+    Development of an AI-powered automation software focused on system-level assistance.
+  </div>
+  <a href="/updates/2025-assistive-workmate.html">Read full details →</a>
+</div>
+
+<div class="event">
+  <div class="date">2024</div>
+  <div class="title">Research & Vision Phase</div>
+  <div class="summary">
+    Early research into cybersecurity automation, AI systems, and blockchain-based access control.
+  </div>
+  <a href="/updates/2024-research-vision.html">Read full details →</a>
+</div>
+
 </body>
 </html>
